# open-provisioner

./: .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
src/api/: main.py  manage.py
src/api/core/: enums.py  types.py
src/api/db/: database.py  dependencies.py  session.py
src/api/db/migrations/: env.py
src/api/db/seeders/: __init__.py  cpe_seeder.py  customer_seeder.py  device_seeder.py  user_seeder.py
src/api/models/: __init__.py  cpe.py  customer.py  device.py  user.py
src/api/queries/: common.py
src/api/queries/actions/: open_bmc.py
src/api/queries/utils/: open_bmc_api_session.py
src/api/schemas/: cpe_schema.py  customer_schema.py  device_schema.py  user_schema.py
src/api/services/: cpe_service.py  customer_service.py  device_service.py  user_service.py
src/app/: main.py  manage.py
src/app/app/: page.tsx
src/app/app/about/: page.tsx
src/app/app/automations/: page.tsx
src/app/app/devices/: page.tsx
src/app/components/: DeviceUsersModal.tsx  NavBar.tsx
src/app/core/: config.py  enums.py  types.py
src/app/db/: database.py  dependencies.py  session.py
src/app/db/migrations/: env.py
src/app/db/seeders/: __init__.py  cpe_seeder.py  customer_seeder.py  (+2 more)
src/app/models/: __init__.py  cpe.py  customer.py  device.py  user.py
src/app/schemas/: cpe_schema.py  customer_schema.py  device_schema.py  user_schema.py
src/app/services/: cpe_service.py  customer_service.py  device_service.py  user_service.py
tests/: conftest.py  test_cpes.py  test_customers.py  test_devices.py  test_users.py
(+20 files in other folders)
