[project]
name = "open-provisioner"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Duellis Padilha",email = "felipe.padilha@brasilnetcp.net.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
